Fixing NS_SynthWave_MAT hopefully

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -790,6 +790,18 @@ K2Node_FunctionEntry.Outputs=True
 K2Node_FunctionResult.Graph=True
 K2Node_FunctionResult.Inputs=True
 K2Node_FunctionResult.Outputs=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -972,6 +984,8 @@ StaticMesh="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
+StaticMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
 
 [Directories2]
 UNR=../../../../UAB_InteractivePlayer/NeonSkies/Content/NS_Levels
@@ -1933,7 +1947,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/NS_UI
+ContentBrowserDrawer.SelectedPaths=/Game/FirstPerson/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1991,16 +2005,16 @@ GeneralProjectSettings=True
 GameMapsSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/NS_UI/NS_Hud
-MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
-MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem3=/Game/NS_UI/NS_TitleMenu
-MRUItem4=/Game/Neon_City_Asset_Pack/Materials/MI_WindowGlass
-MRUItem5=/Game/Neon_City_Asset_Pack/Materials/MI_SidewalkB
-MRUItem6=/Game/Neon_City_Asset_Pack/Meshes/SM_Neon_Building_02
-MRUItem7=/Game/Neon_City_Asset_Pack/Materials/MM_NeonCity
-MRUItem8=/Game/Neon_City_Asset_Pack/Materials/MI_Wall
-MRUItem9=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem0=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem1=/Game/NS_UI/NS_Hud
+MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
+MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem4=/Game/NS_UI/NS_TitleMenu
+MRUItem5=/Game/Neon_City_Asset_Pack/Materials/MI_WindowGlass
+MRUItem6=/Game/Neon_City_Asset_Pack/Materials/MI_SidewalkB
+MRUItem7=/Game/Neon_City_Asset_Pack/Meshes/SM_Neon_Building_02
+MRUItem8=/Game/Neon_City_Asset_Pack/Materials/MM_NeonCity
+MRUItem9=/Game/Neon_City_Asset_Pack/Materials/MI_Wall
 MRUItem10=/Game/NS_Blueprints/BP_MainMenuSceneCamera
 MRUItem11=/Game/NS_UI/NS_Menu
 MRUItem12=/Game/FirstPerson/Blueprints/BP_MainMenuSceneCamera
