added beginnings of main level design

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,13 +95,12 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1929,Y=1140)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@DESKTOP-H39IJFD
 LastExecutedLaunchName=DESKTOP-H39IJFD
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-LastExecutedPlayModeType=PlayMode_InEditorFloating
 MultipleInstancePositions=(X=0,Y=0)
 NewWindowWidth=1929
 NewWindowHeight=1140
@@ -131,7 +130,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [EditorStartup]
-LastLevel=/Game/NS_Levels/NS_MainMenuLevel
+LastLevel=/Game/NS_Levels/NS_MainLevel
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -820,6 +819,15 @@ SoundCue.Voice Management=True
 SoundCue.Developer=True
 SoundNodeWavePlayer.WavePlayer=True
 SoundNodeMixer.Mixer=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionInverseLinearInterpolate.MaterialExpressionInverseLinearInterpolate=True
+MaterialExpressionInverseLinearInterpolate.MaterialExpression=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.HLOD=True
+Actor.WorldPartition=True
+Actor.Actor=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -834,7 +842,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()),("/Game/NS_Levels/NS_MainLevel.NS_MainLevel", ()))
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=180.000
+ScreenPosition=X=1050.000 Y=32.000
 WindowSize=X=1284.000 Y=724.000
 InitiallyMaximized=True
 
@@ -852,8 +860,8 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [DetailPropertyExpansion]
-WorldSettings=
-Info=
+WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
+Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
@@ -1010,13 +1018,16 @@ SoundNodeWavePlayer="\"Object\" "
 SoundNodeAssetReferencer="\"Object\" "
 SoundNode="\"Object\" \"Object.Mixer.InputVolume\" "
 SoundNodeMixer="\"Object\" \"Object.Mixer.InputVolume\" "
+MaterialExpressionMaterialFunctionCall="\"Object\" "
+MaterialExpressionInverseLinearInterpolate="\"Object\" "
+Actor="\"Object\" "
 
 [Directories2]
-UNR=E:/NeonSkiesGame/NeonSkies/Content/NS_Levels
+UNR=../../../../../../Users/DK/cs476/group/neonskies/Content/NS_Levels
 BRUSH=../../../../UAB_InteractivePlayer/NeonSkies/Content/
 FBX=../../../../UAB_InteractivePlayer/NeonSkies/Content/
 FBXAnim=../../../../UAB_InteractivePlayer/NeonSkies/Content/
-GenericImport=../../../../UAB_InteractivePlayer/MyProject6/Content/SynthSquare.png
+GenericImport=../../../../../../Users/DK/cs476/group/city/Neon_City.png
 GenericExport=D:/UAB_InteractivePlayer/NeonSkies/Content/Neon_City_Asset_Pack/Materials/Textures
 GenericOpen=../../../../UAB_InteractivePlayer/NeonSkies/Content/
 GenericSave=../../../../UAB_InteractivePlayer/NeonSkies/Content/
@@ -1906,8 +1917,8 @@ WidgetCarousel.TimeStamp=2022.07.20-00.58.32
 WidgetCarousel.LastCompileMethod=External
 HierarchicalLODOutliner.TimeStamp=2022.07.20-00.58.25
 HierarchicalLODOutliner.LastCompileMethod=External
-HierarchicalLODUtilities.TimeStamp=2022.06.17-00.18.06
-HierarchicalLODUtilities.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2022.07.17-22.39.26
+HierarchicalLODUtilities.LastCompileMethod=External
 WorldBrowser.TimeStamp=2022.07.20-00.58.32
 WorldBrowser.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2022.07.20-00.58.24
@@ -1927,6 +1938,7 @@ UATHelper.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
@@ -1954,7 +1966,7 @@ WorldSettings=WorldSettings.WorldPartition.None,WorldSettings.GameMode.SelectedG
 WorldPartitionRuntimeSpatialHash=
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/NS_Levels
+ContentBrowserTab1.SelectedPaths=/Game/Neon_City/Meshes
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -2030,23 +2042,26 @@ GeneralProjectSettings=True
 GameMapsSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/NS_Audio/NS_Background_Music_Cue
-MRUItem1=/Game/FirstPerson/Blueprints/BP_Rifle
-MRUItem2=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem3=/Game/NS_UI/NS_Hud
-MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
-MRUItem5=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem6=/Game/NS_UI/NS_TitleMenu
-MRUItem7=/Game/Neon_City_Asset_Pack/Materials/MI_WindowGlass
-MRUItem8=/Game/Neon_City_Asset_Pack/Materials/MI_SidewalkB
-MRUItem9=/Game/Neon_City_Asset_Pack/Meshes/SM_Neon_Building_02
-MRUItem10=/Game/Neon_City_Asset_Pack/Materials/MM_NeonCity
-MRUItem11=/Game/Neon_City_Asset_Pack/Materials/MI_Wall
-MRUItem12=/Game/NS_Blueprints/BP_MainMenuSceneCamera
-MRUItem13=/Game/NS_UI/NS_Menu
-MRUItem14=/Game/FirstPerson/Blueprints/BP_MainMenuSceneCamera
-MRUItem15=/Game/NS_UI/NewWidgetBlueprint
-MRUItem16=/Game/NS_Levels/NS_MainLevel
+MRUItem0=/Game/NS_Levels/NS_MainLevel
+MRUItem1=/Game/NS_Materials/SynthWaveMaterial3
+MRUItem2=/Game/NS_Materials/NS_SynthWave_MAT2
+MRUItem3=/Game/NS_Materials/NS_SynthWave_MAT
+MRUItem4=/Game/NS_Materials/SynthMaterial
+MRUItem5=/Game/NS_Materials/SynthSquare_Mat
+MRUItem6=/Game/NS_Audio/NS_Background_Music_Cue
+MRUItem7=/Game/FirstPerson/Blueprints/BP_Rifle
+MRUItem8=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem9=/Game/NS_UI/NS_Hud
+MRUItem10=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
+MRUItem11=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem12=/Game/NS_UI/NS_TitleMenu
+MRUItem13=/Game/Neon_City_Asset_Pack/Materials/MI_WindowGlass
+MRUItem14=/Game/Neon_City_Asset_Pack/Materials/MI_SidewalkB
+MRUItem15=/Game/Neon_City_Asset_Pack/Meshes/SM_Neon_Building_02
+MRUItem16=/Game/Neon_City_Asset_Pack/Materials/MM_NeonCity
+MRUItem17=/Game/Neon_City_Asset_Pack/Materials/MI_Wall
+MRUItem18=/Game/NS_Blueprints/BP_MainMenuSceneCamera
+MRUItem19=/Game/NS_UI/NS_Menu
 
 [WidgetTemplatesExpanded]
 Common=False
@@ -2185,6 +2200,10 @@ GraphEditorQuickJumps=()
 /Game/Neon_City_Asset_Pack/Materials/MI_WindowGlass.MI_WindowGlass=1
 /Game/FirstPerson/Blueprints/BP_Rifle.BP_Rifle=1
 /Game/NS_Audio/NS_Background_Music_Cue.NS_Background_Music_Cue=0
+/Game/NS_Materials/SynthMaterial.SynthMaterial=0
+/Game/NS_Materials/NS_SynthWave_MAT2.NS_SynthWave_MAT2=0
+/Game/NS_Materials/NS_SynthWave_MAT.NS_SynthWave_MAT=0
+/Game/NS_Materials/SynthWaveMaterial3.SynthWaveMaterial3=1
 
 [SuppressableDialogs]
 DeleteConfirmationVariable_Warning=False
@@ -2196,18 +2215,28 @@ LastLogListing=PIE
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter;/Engine/Transient.ActorFactoryBlueprint_0
-RecentlyPlaced=/Game/Neon_City_Asset_Pack/Meshes/SM_Neon_Building_12.SM_Neon_Building_12;
-RecentlyPlaced=/Game/Neon_City_Asset_Pack/Meshes/SM_Neon_Small_Building_09.SM_Neon_Small_Building_09;
-RecentlyPlaced=/Game/Neon_City_Asset_Pack/Meshes/SM_Neon_Skyscraper_Building_07.SM_Neon_Skyscraper_Building_07;
-RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
-RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
-RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Hologram_Diamond.SM_Hologram_Diamond;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Small_Building_07.SM_Neon_Small_Building_07;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Small_Building_04.SM_Neon_Small_Building_04;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Road_Surface.SM_Road_Surface;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Building_08.SM_Neon_Building_08;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Small_Building_01.SM_Neon_Small_Building_01;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Building_11.SM_Neon_Building_11;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Road_B.SM_Road_B;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Road_A.SM_Road_A;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Text_Star.SM_Text_Star;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_SpotLightA.SM_SpotLightA;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Building_16.SM_Neon_Building_16;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Building_01.SM_Neon_Building_01;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Building_02.SM_Neon_Building_02;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Building_10.SM_Neon_Building_10;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Building_04.SM_Neon_Building_04;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Road_C.SM_Road_C;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Hologram_RubberDuck.SM_Hologram_RubberDuck;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Skyscraper_Building_07.SM_Neon_Skyscraper_Building_07;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Building_12.SM_Neon_Building_12;
 
 [DetailCategoriesAdvanced]
 DirectionalLight.LightShafts=False
