Roadwork, New Buildings, and Boundary Walls

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -132,6 +132,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CameraSpeed=6
 CurrentPosGridSize=0
 CurrentScalingGridSize=6
+CurrentRotGridSize=0
 
 [EditorStartup]
 LastLevel=/Game/NS_Levels/NS_MainLevel
@@ -853,7 +854,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()),("/Game/NS_Levels/NS_MainLevel.NS_MainLevel", ()))
 
 [RootWindow]
-ScreenPosition=X=1050.000 Y=32.000
+ScreenPosition=X=183.000 Y=19.000
 WindowSize=X=1284.000 Y=724.000
 InitiallyMaximized=True
 
@@ -1931,7 +1932,7 @@ WidgetCarousel.TimeStamp=2022.07.23-03.24.22
 WidgetCarousel.LastCompileMethod=External
 HierarchicalLODOutliner.TimeStamp=2022.07.23-03.24.16
 HierarchicalLODOutliner.LastCompileMethod=External
-HierarchicalLODUtilities.TimeStamp=2022.07.17-22.39.26
+HierarchicalLODUtilities.TimeStamp=2022.07.23-03.24.16
 HierarchicalLODUtilities.LastCompileMethod=External
 WorldBrowser.TimeStamp=2022.07.23-03.24.22
 WorldBrowser.LastCompileMethod=External
@@ -2233,12 +2234,16 @@ bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/Neon_City/Meshes/Stak_Tower.Stak_Tower;
-RecentlyPlaced=/Game/Neon_City/Meshes/SM_Road_Surface.SM_Road_Surface;
-RecentlyPlaced=/Game/Neon_City/Meshes/SM_Road_D.SM_Road_D;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Building_09.SM_Neon_Building_09;
 RecentlyPlaced=/Game/Neon_City/Meshes/SM_Road_A.SM_Road_A;
-RecentlyPlaced=/Game/Neon_City/Meshes/SM_Road_C.SM_Road_C;
 RecentlyPlaced=/Game/Neon_City/Meshes/SM_Road_B.SM_Road_B;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Road_C.SM_Road_C;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Road_D.SM_Road_D;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Skyscraper_Building_05.SM_Neon_Skyscraper_Building_05;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Skyscraper_Building_01.SM_Neon_Skyscraper_Building_01;
+RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Plane.Shape_Plane;
+RecentlyPlaced=/Game/Neon_City/Meshes/Star_Tower.Star_Tower;
+RecentlyPlaced=/Game/Neon_City/Meshes/SM_Road_Surface.SM_Road_Surface;
 RecentlyPlaced=/Game/Neon_City/Meshes/SM_Hologram_Earth.SM_Hologram_Earth;
 RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Building_12.SM_Neon_Building_12;
 RecentlyPlaced=/Game/Neon_City/Meshes/SM_Hologram_Mars.SM_Hologram_Mars;
@@ -2249,10 +2254,6 @@ RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Building_08.SM_Neon_Building_08;
 RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Small_Building_01.SM_Neon_Small_Building_01;
 RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Building_11.SM_Neon_Building_11;
 RecentlyPlaced=/Game/Neon_City/Meshes/SM_Text_Star.SM_Text_Star;
-RecentlyPlaced=/Game/Neon_City/Meshes/SM_SpotLightA.SM_SpotLightA;
-RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Building_16.SM_Neon_Building_16;
-RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Building_01.SM_Neon_Building_01;
-RecentlyPlaced=/Game/Neon_City/Meshes/SM_Neon_Building_02.SM_Neon_Building_02;
 
 [DetailCategoriesAdvanced]
 DirectionalLight.LightShafts=False
