--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -59,3 +59,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/NavigationSystem.RecastNavMesh]
+bForceRebuildOnLoad=True
+
