--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=2037,Y=1720)
+LastSize=(X=2037,Y=1360)
 LastExecutedLaunchDevice=Windows@DESKTOP-H39IJFD
 LastExecutedLaunchName=DESKTOP-H39IJFD
 LastExecutedPIEPreviewDevice=
@@ -103,7 +103,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=0)
 NewWindowWidth=2037
-NewWindowHeight=1720
+NewWindowHeight=1360
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -139,15 +139,6 @@ LastLevel=/Game/NS_Levels/NS_MainLevel
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/NS_Enemy/Enemy_BP.Enemy_BP
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
-OpenAssetsAtExit=/Game/NS_Weapons/BP_Rifle_Projectile.BP_Rifle_Projectile
-OpenAssetsAtExit=/Game/NS_Weapons/BP_Rifle.BP_Rifle
-OpenAssetsAtExit=/Game/NS_Weapons/BP_Rifle_Projectile_Instance.BP_Rifle_Projectile_Instance
-OpenAssetsAtExit=/Game/NS_Levels/NS_MainLevel.NS_MainLevel:PersistentLevel.NS_MainLevel
-OpenAssetsAtExit=/Game/NS_Audio/NS_Full_Background_Music_Cue.NS_Full_Background_Music_Cue
-OpenAssetsAtExit=/Game/NS_Audio/NS_Background_Music_Cue.NS_Background_Music_Cue
-OpenAssetsAtExit=/Game/NS_Weapons/P_Explosion1.P_Explosion1
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -996,6 +987,8 @@ ParticleSpriteEmitter.Cascade=True
 ParticleSpriteEmitter.Significance=True
 ParticleModuleSize.Size=True
 ParticleModuleSize.Cascade=True
+StaticMesh.Thumbnail=True
+StaticMesh.LevelOfDetail=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1010,7 +1003,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()),("/Game/NS_Levels/NS_MainLevel.NS_MainLevel", ()))
 
 [RootWindow]
-ScreenPosition=X=182.667 Y=18.667
+ScreenPosition=X=182.000 Y=18.000
 WindowSize=X=1288.000 Y=728.000
 InitiallyMaximized=True
 
@@ -1174,8 +1167,8 @@ MaterialEditorInstanceConstant="\"Object\" \"Object.ParameterGroups.ParameterGro
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
 AssetViewerSettings="\"Object\" "
-StaticMesh="\"Object\" "
-StreamableRenderAsset="\"Object\" "
+StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[1]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[2]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[3]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[4]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[1]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[2]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[3]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[4]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 StaticMeshComponent="\"Object\" "
@@ -1229,7 +1222,7 @@ ParticleModuleSize="\"Object\" \"Object.Size.StartSize\" \"Object.Size.StartSize
 ParticleModuleSizeBase="\"Object\" \"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 
 [Directories2]
-UNR=E:/NeonSkiesGame/NeonSkies/Content/NS_Levels
+UNR=../../../../../../Users/DK/cs476/group/neonskies/Content/NS_Levels
 BRUSH=../../../../UAB_InteractivePlayer/NeonSkies/Content/
 FBX=../../../../UAB_InteractivePlayer/NeonSkies/Content/
 FBXAnim=../../../../UAB_InteractivePlayer/NeonSkies/Content/
@@ -2152,9 +2145,9 @@ DistCurveEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=L:/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
@@ -2264,9 +2257,10 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Sprint,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Sprint,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Sprint,
+StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/NS_Levels
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -2371,26 +2365,26 @@ GameMapsSettings=True
 InputSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StarterContent/Particles/P_Explosion1
-MRUItem1=/Game/NS_Audio/NS_Background_Music_Cue
-MRUItem2=/Game/NS_Audio/NS_Full_Background_Music_Cue
-MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem4=/Game/NS_Character/Female_Mannequin/Blueprints/BP_Character_Builder
-MRUItem5=/Game/FirstPersonArms/Animations/FirstPersonFire_Montage
-MRUItem6=/Game/FirstPersonArms/Animations/FirstPerson_AnimBP
-MRUItem7=/Game/NS_Weapons/Trail
-MRUItem8=/Game/NS_Weapons/BP_Rifle_Projectile_Instance
-MRUItem9=/Game/NS_Weapons/BP_Rifle_Projectile
-MRUItem10=/Game/NS_Weapons/BP_Rifle
-MRUItem11=/Game/NS_UI/NS_Menu
-MRUItem12=/Game/NS_UI/NS_Hud
-MRUItem13=/Game/NS_UI/NS_TitleMenu
-MRUItem14=/Game/Characters/Mannequins/Materials/Instances/Quinn/MI_Quinn_02
-MRUItem15=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem16=/Game/Characters/Mannequins/Materials/Instances/Quinn/MI_Quinn_01
-MRUItem17=/Game/NS_Weapons/ModernRiflesBundle2/DemoFolder/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
-MRUItem18=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem19=/Game/NS_Enemy/Enemy_BP
+MRUItem0=/Game/Neon_City/Meshes/SM_Neon_Skyscraper_Building_05
+MRUItem1=/Game/Neon_City/Meshes/SM_Neon_Building_12
+MRUItem2=/Game/Neon_City/Meshes/Star_Tower
+MRUItem3=/Game/NS_Levels/NS_MainLevel
+MRUItem4=/Game/StarterContent/Particles/P_Explosion1
+MRUItem5=/Game/NS_Audio/NS_Background_Music_Cue
+MRUItem6=/Game/NS_Audio/NS_Full_Background_Music_Cue
+MRUItem7=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem8=/Game/NS_Character/Female_Mannequin/Blueprints/BP_Character_Builder
+MRUItem9=/Game/FirstPersonArms/Animations/FirstPersonFire_Montage
+MRUItem10=/Game/FirstPersonArms/Animations/FirstPerson_AnimBP
+MRUItem11=/Game/NS_Weapons/Trail
+MRUItem12=/Game/NS_Weapons/BP_Rifle_Projectile_Instance
+MRUItem13=/Game/NS_Weapons/BP_Rifle_Projectile
+MRUItem14=/Game/NS_Weapons/BP_Rifle
+MRUItem15=/Game/NS_UI/NS_Menu
+MRUItem16=/Game/NS_UI/NS_Hud
+MRUItem17=/Game/NS_UI/NS_TitleMenu
+MRUItem18=/Game/Characters/Mannequins/Materials/Instances/Quinn/MI_Quinn_02
+MRUItem19=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
 
 [WidgetTemplatesExpanded]
 Common=False
@@ -2546,6 +2540,9 @@ GraphEditorQuickJumps=()
 /Game/NS_Weapons/BP_Rifle_Projectile_Instance.BP_Rifle_Projectile_Instance=0
 /Game/NS_Audio/NS_Full_Background_Music_Cue.NS_Full_Background_Music_Cue=0
 /Game/NS_Weapons/P_Explosion1.P_Explosion1=0
+/Game/Neon_City/Meshes/Star_Tower.Star_Tower=1
+/Game/Neon_City/Meshes/SM_Neon_Building_12.SM_Neon_Building_12=1
+/Game/Neon_City/Meshes/SM_Neon_Skyscraper_Building_05.SM_Neon_Skyscraper_Building_05=1
 
 [SuppressableDialogs]
 DeleteConfirmationVariable_Warning=False
